# pam-wrapper

./: .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  CPackConfig.cmake  CTestConfig.cmake  CompilerChecks.cmake  ConfigureChecks.cmake  README.md  compile_commands.json  config.h.cmake  libpamtest.pc.cmake  pam_wrapper-config.cmake.in  pam_wrapper.pc.cmake
.clangd/index/: libpamtest.c.50591A3CF2F16696.idx  libpamtest.h.5D17FC28842DB9A6.idx  pam_chatty.c.20FD0B741C24D56B.idx  pam_get_items.c.0EF57BF2FB557FDA.idx  pam_matrix.c.06B52DD1FD84DDA5.idx  pam_set_items.c.4EB3C1ADFA19BBB6.idx  pam_wrapper.c.88B9874C29C542E9.idx  pwrap_compat.h.61E8526BE3F084B4.idx  pypamtest.c.6EAB1E75E1074FD7.idx  test_pam_wrapper.c.0DFC22A2864C2D78.idx
debian/: changelog  control  copyright  libpam-wrapper.install  libpam-wrapper.lintian-overrides  libpamtest0-dev.install  libpamtest0.install  python3-pypamtest.install  rules  watch
debian/patches/: no-soname.diff
debian/tests/: control  wrap-and-sort
debian/upstream/: metadata  signing-key.asc
doc/: CMakeLists.txt  pam_chatty.8  pam_chatty.8.txt  pam_wrapper.1  pam_wrapper.1.txt
include/: CMakeLists.txt
src/: CMakeLists.txt
src/modules/: CMakeLists.txt  pam_chatty.c  pam_matrix.c
src/python/: CMakeLists.txt
src/python/python2/: CMakeLists.txt
src/python/python3/: CMakeLists.txt
tests/: CMakeLists.txt  pypamtest_test.py  test_pam_wrapper.c
tests/services/: chatty.in
